# WatchPartyBot

./: .gitignore  README.md  pyproject.toml
tests/: test_watchparty_bot.py
watchparty_bot/: cli.py  config.py
watchparty_bot/src/: discord_bot.py  utils.py  wrappeer.py  wrapper.py
