[tool.poetry]
name = "WatchParty-Bot"
version = "0.1.0"
description = ""
authors = ["joaooliveira247 <joaooliveira247@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.9"
typer = "^0.6.1"
requests = "^2.28.1"
black = "^22.6.0"
disnake = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
watchparty = "watchparty_bot.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
